# ruin

./: .luarc.json  Cargo.toml  README.md
assets/arena/: bricks_1.aseprite  bricks_1.json  fence.aseprite  fence.json
assets/canvas/: canvas_theme.aseprite  canvas_theme.json
assets/death/: death_blinking.json  death_idle.aseprite  death_running.aseprite
assets/skelly/: skelly_leaping.json
assets/ui_elements/button_1/: Button_1.aseprite  primary_canvas_texture_map.aseprite
crates/ruin_assets/: Cargo.toml
crates/ruin_assets/src/: asset.rs  assets.rs  handle.rs  id.rs  image.rs  lib.rs  texture.rs
crates/ruin_bitmaps/: Cargo.toml
crates/ruin_bitmaps/src/: lib.rs
crates/ruin_camera/: Cargo.toml
crates/ruin_camera/src/: lib.rs
crates/ruin_canvas/: Cargo.toml
crates/ruin_canvas/src/: lib.rs
crates/ruin_debug/: Cargo.toml
crates/ruin_ecs/: Cargo.toml
crates/ruin_ecs/src/: action_state.rs  animation.rs  flip.rs  health.rs  lib.rs  scene.rs  sprite_sheet.rs  transform.rs  world.rs
crates/ruin_engine/: Cargo.toml
crates/ruin_engine/src/: engine.rs  lib.rs
crates/ruin_graphics/: Cargo.toml
crates/ruin_graphics/src/: lib.rs
crates/ruin_graphics/src/graphics_2d/: camera_uniform.rs  depth_texture.rs  graphics_2d.rs  mod.rs  shape_tesselation.rs  vertex.rs  world_render_batch.rs
crates/ruin_graphics/src/graphics_2d/shaders/: 2d_camera_and_color.wgsl  2d_canvas_sprite.wgsl
crates/ruin_lua_runtime/: Cargo.toml
crates/ruin_lua_runtime/src/: lib.rs
crates/ruin_player_controller/: Cargo.toml
lua_runtime/: ruin.lua
lua_runtime/scripts/: aseprite_parser.lua  globals.lua  main.lua  setup.lua
lua_runtime/scripts/canvas/: descend_button.lua  main_menu.lua
lua_runtime/scripts/characters/: death.lua  skelly.lua
src/: bitmaps.rs  camera.rs  debug.rs  engine.rs  game_element.rs  graphics.rs  inputs.rs  lua_scriptor.rs  main.rs  scene.rs  texture.rs
src/camera/: camera.rs  dimensional_camera.rs  mod.rs  universal_camera.rs
src/camera_2d/: camera_2d.rs  mod.rs
src/camera_3d/: camera_3d.rs  dimensional_camera.rs  mod.rs  universal_camera.rs
src/components_systems/: action_state.rs  animation.rs  entity.rs  health.rs  mod.rs  sprite_sheet.rs  transorm_state_updates.rs
src/graphics/: camera_uniform.rs  graphics.rs  mod.rs  vertex.rs
src/graphics_2d/: camera_uniform.rs  debug_render_batch.rs  graphics_2d.rs  mod.rs  shape_pipelines.rs  shape_tesselation.rs  space.rs  vertex.rs  world_render_batch.rs
src/graphics_3d/: camera_uniform.rs  graphics_3d.rs  mod.rs
src/lua-scripts/: setup.lua
src/scripts/: aseprite_parser.lua  dummy.lua  fence.lua  game_asset_builders.lua  game_math.lua  ghost.lua  globals.lua  main.lua  main_character.lua  pretty_print.lua  setup.lua  skelly.lua
src/shaders/: shader-1.wgsl
src/ui_canvas/: mod.rs  ui_canvas.rs
src/world/: mod.rs  world.rs
(+44 files in other folders)
