[package]
name = "rust-game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"], optional = true }
mlua = { version = "0.10.5", features = ["lua54", "vendored"] }
wgpu = "25.0"
winit = "0.30.11"
pollster = "0.3"
rand = "0.9.1"
bytemuck = "1.23.1"
image = { version = "0.25.6", features = ["png", "jpeg"] }
cgmath = "0.18.0"
