[package]
name = "ruin-game-engine"
version = "0.1.0-dev"
edition = "2021"

[workspace]
members = [
    "crates/*",
]


[dependencies]
ruin_engine = { path = "crates/ruin_engine" }
ruin_lua_runtime = { path = "crates/ruin_lua_runtime" }
ruin_camera = { path = "crates/ruin_camera" }
anyhow = "1.0"
mlua = { version = "0.10.5", features = ["lua54", "vendored"] }
winit = "0.30.11"
